--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A template project for node.js ",
   "main": "dist/app.js",
   "scripts": {
-    "test": "jest --coverage --testPathPattern='tests/.*\\.spec\\.ts'",
+    "test": "jest --coverage --detectOpenHandles --testPathPattern='tests/.*\\.spec\\.ts'",
     "build": "node_modules/typescript/bin/tsc --project ./",
     "start": "node dist/app.js",
     "start:dev": "NODE_ENV=dev nodemon",
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@types/jest": "^27.4.1",
+    "@types/newman": "^5.3.0",
     "@types/node": "^17.0.21",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
@@ -26,6 +27,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "jest": "^27.5.1",
     "moq.ts": "^9.0.0",
+    "newman": "^5.3.2",
     "nodemon": "^2.0.16",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.7.0",
@@ -54,5 +56,11 @@
   "bugs": {
     "url": "https://github.com/bryopsida/typescript-nodejs-template/issues"
   },
-  "homepage": "https://github.com/bryopsida/typescript-nodejs-template#readme"
+  "homepage": "https://github.com/bryopsida/typescript-nodejs-template#readme",
+  "dependencies": {
+    "@fastify/auth": "^3.0.1",
+    "@fastify/basic-auth": "^4.0.0",
+    "@fastify/helmet": "^9.1.0",
+    "@fastify/oauth2": "^5.0.0"
+  }
 }
