--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@fastify/auth": "^3.0.1",
     "@fastify/basic-auth": "^4.0.0",
     "@fastify/helmet": "^9.1.0",
-    "@fastify/oauth2": "^5.0.0"
+    "@fastify/oauth2": "^5.0.0",
+    "fastify": "^4.0.1"
   }
 }
